# pronom-website

./: .dockerignore  .gitignore  .isort.cfg  Dockerfile  Dockerfile.flask  Dockerfile.nginx  README.md  bootstrap.json  bootstrap.yaml  details.py  docker-compose.yml  home.py  http_server.py  indexes  package-lock.json  package.json  pyproject.toml  requirements-generate.txt  requirements-results.txt  requirements.txt  results.py  run-server.sh  search.py  soap.py  submissions.py  utils.py
.github/: dependabot.yml
.github/scripts/: generate_index_file.py  generate_pages.py  generate_pronom_xml.py  generate_signature_json.py  generate_version_file.py  release.sh  upload_signature_files.py
.github/workflows/: release.yml  test.yml
app/: __init__.py  app.py
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: cloudfront-access-logs.ts  cloudfront-certificate.ts  cloudfront-dns.ts  cloudfront-waf.ts  infrastructure-stack.ts
infrastructure/test/: cloudfront-access-logs.test.ts  cloudfront-dns.test.ts  cloudfront-waf.test.ts  infrastructure.test.ts
lambdas/: results.py  soap.py  submissions.py  submissions_received.py
lambdas/results/: pyproject.toml  results.py
lambdas/soap/: signature_file_description.html  signature_file_version_description.html  soap.py  soap_description.html  soap_wsdl.xml
lambdas/submissions/: pyproject.toml  submissions.py
lambdas/templates/: accessibility.html  actor_details.html  container_signature_section.html  contribute.html  details.html  details_section.html  error.html  help.html  home.html  index.html  modify.html  modify_actor.html  release_notes.html  releases.html  search.html  search_results.html  signature.html  signature_list.html  signature_section.html  site.js  submissions_received.html
lambdas/test/: test_results.py  test_soap.py  test_submissions.py  test_submissions_received.py
nginx/: default.conf
src/styles/: font-awesome.scss  main.scss  print.scss
styles/: main.css
templates/: actor_details.html  container_signature_section.html  details.html  details_section.html  edit.html  home.html  index.html  search_results.html  submissions_received.html
terraform/: .terraform.lock.hcl  acm.tf  alarms.tf  apigateway.tf  cloudfront.tf  lambda.tf  locals.tf  oidc.tf  providers.tf  response.json  route53.tf  s3.tf  shield.tf  variables.tf  waf.tf
terraform/lambda/: index.mjs
tests/: cypress.config.js  package-lock.json  package.json
tests/cypress/: tsconfig.json
tests/cypress/e2e/: add_organisation.cy.ts  add_signature.cy.ts  contribute.cy.ts  (+8 more)
