[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "MancunianSam",email = "sam.palmer@nationalarchives.gov.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "tna-frontend-jinja (>=0.24.0,<0.26.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "boto3 (>=1.40.30,<2.0.0)",
    "ghapi (>=1.0.6,<2.0.0)",
    "fastcore (>=1.8.8,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
