[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "MancunianSam",email = "sam.palmer@nationalarchives.gov.uk"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
tna-frontend-jinja = "0.31.1"
jinja2 = "^3.1.6"
boto3 = "^1.42.46"
ghapi = "^1.0.10"
fastcore = "^1.12.12"
pycountry = "^24.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
